--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -19,6 +19,7 @@
 
     button {
         width: 10vw;
+        font-size: 1vw;
         margin-left: 45vw;
         margin-top: 5vh;
     }
